testsuite/positive/Issue-git-0122-lib.n
// REFERENCE: Nemerle.Compiler

namespace LiteralSplace
{
  public macro Macro1()
  {
    def str = "Test 1";
    <[ $str ]>
  }

  public macro Macro2()
  {
    def num = 42;
    <[ System.Console.WriteLine($num) ]>
  }
}
