testsuite/negative/lock.n


def l = [1];
l.Iter (fun (x) {
  lock (x) { // E: `System.Int32' is not a reference type as required by the lock expression
    System.Console.WriteLine ("x");
  }
});

